--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: iPortfolio - v3.10.0
-* Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -793,6 +786,11 @@ section {
   right: -5px;
   position: relative;
   top: 10px;
+}
+
+.portfolio-title{
+  text-align: center;
+  font-family: Georgia, serif;
 }
 
 .testimonials .testimonial-item p {
