--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,6 +326,12 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+#about {
+  padding: 30px; 
+}
+#about p {
+  text-align: justify;
+}
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
@@ -362,7 +368,7 @@ section {
 # Facts
 --------------------------------------------------------------*/
 .facts {
-  padding-bottom: 30px;
+  padding: 30px;
 }
 
 .facts .count-box {
@@ -412,11 +418,18 @@ section {
 /*--------------------------------------------------------------
 # Akills
 --------------------------------------------------------------*/
+#skills {
+  padding: 30px; 
+}
+#skills p {
+  text-align: justify;
+}
 .skills .progress {
   height: 60px;
   display: block;
   background: none;
   border-radius: 0;
+  padding: 30px;
 }
 
 .skills .progress .skill {
@@ -445,6 +458,8 @@ section {
   transition: 0.9s;
   background-color: #149ddd;
 }
+
+
 
 /*--------------------------------------------------------------
 # Resume
@@ -510,6 +525,12 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+#portfolio{
+  padding: 30px;
+}
+#portfolio p{
+  text-align: justify;
+}
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
@@ -836,8 +857,8 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-.contact {
-  padding-bottom: 130px;
+#contact{
+  padding: 30px;
 }
 
 .contact .info {
