--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,10 +76,11 @@ h6 {
 }
 
 #header .profile img {
-  margin: 15px auto;
+  margin: 20px auto;
   display: block;
   width: 120px;
-  border: 8px solid #2c2f3f;
+  border: 6px solid #2c2f3f;
+  transform: scale(1.2);
 }
 
 #header .profile h1 {
@@ -221,11 +222,12 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/final-bg.jpg") center;
+  background: url("../img/hero-bg.png")  center;
   background-size:cover;
+  background-position: 80% center ;
 }
 
-#hero:before {
+/* #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
@@ -234,7 +236,7 @@ h6 {
   left: 0;
   right: 0;
   z-index: 1;
-}
+} */
 
 #hero .hero-container {
   position: relative;
@@ -244,6 +246,7 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
+  margin-right: 200px;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
