--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,8 +222,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png")  center;
-  background-size:cover;
+  background: url("../img/hero-bg.png");
 }
 
 /* #hero:before {
